move some files

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<title>3WayChat</title>
 	<link rel="shortcut icon" href="favicon.ico">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<link rel="stylesheet" type="text/css" href="js/bower_components/sweetalert/dist/sweetalert.css">
+	<link rel="stylesheet" type="text/css" href="css/sweetalert.css">
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<script type="text/javascript" src="js/bower_components/sweetalert/dist/sweetalert-dev.js"></script>
+	<script type="text/javascript" src="js/sweetalert-dev.js"></script>
 	<script type="text/javascript" src="https://cdn.skyway.io/skyway.js"></script>
 	<script type="text/javascript">
 		var MODE=0;
